--- a/scss/style.css
+++ b/scss/style.css
@@ -5,9 +5,7 @@
   margin-bottom: 10px; }
 
 .indy-tweet-user, .indy-tweet-timestamp {
-  display: inline-block; }
-
-.indy-tweet-user {
-  padding-right: 20px; }
+  display: inline-block;
+  padding-right: 10px; }
 
 /*# sourceMappingURL=style.css.map */
