--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,7 @@
+.twittler-container {
+  height: 590px;
+  overflow: auto; }
+
 .tweetwrapper {
   background-color: #eee;
   border-radius: 10px;
@@ -6,6 +10,28 @@
 
 .indy-tweet-user, .indy-tweet-timestamp {
   display: inline-block;
-  padding-right: 10px; }
+  padding-right: 5px; }
+
+.indy-tweet-user {
+  font-family: 'Arvo', serif;
+  font-weight: 100; }
+
+.top-bar {
+  border-bottom: 1px solid black;
+  background-color: #333333;
+  margin-bottom: 10px; }
+
+ul.nav-bar {
+  margin-top: 10px; }
+
+.nav-bar li {
+  display: inline-block;
+  padding-right: 15px;
+  font-size: 2em;
+  color: white; }
+  .nav-bar li :hover {
+    color: #7299b1;
+    transition-timing-function: ease;
+    transition-duration: .4s; }
 
 /*# sourceMappingURL=style.css.map */
